# simple_http

./: Dockerfile  client_side.py  data.json  decorator.py  main.py  message.html  proxy_server.py  pyproject.toml  saver.py
storage/: data.json  saver.py
templates/: error.html  index.html  message.html  message_successfully.html
