[tool.poetry]
name = "py-engineering-hw4"
version = "0.1.0"
description = ""
authors = ["Abboth <Alexmikhailov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
