[tool.poetry]
name = "py-engineering-hw4"
version = "0.1.0"
description = ""
authors = ["Abboth <Alexmikhailov90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
